commit visual-slam and logo favicon & main page

--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Visual Art/Healing/Music</title>
   <link rel="stylesheet" href="index.css">
+  <link rel="icon" type="image/x-icon" href="favicon.svg">
 </head>
 <body>
   <nav>
     <div class="logo">
-      <a href="https://www.iamboyowa.art">LOGO</a>
+      <a href="https://www.iamboyowa.art">
+        <img src="favicon.svg" alt="IAMBOYOWA">
+      </a>
       
     </div>
     <div class="links">
@@ -27,7 +30,7 @@
 
     <div id="visual-slam">
       <div class="book-cover">
-        <img src="" alt="visual-slam-artpoetrybook_img">
+        <img src="(just front cover) VISUAL-SLAM_200x250.png" alt="visual-slam-artpoetrybook_img">
       </div>
       <div class="desc">
         <span>
