add logo to footer

--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
     </main>
 
     <footer class="footer">
+      <img src="favicon.svg" height="30px" width="30px" style="margin-right: 5px">
       Copyright © <span id="year"></span> iamboyowa
     </footer>
 
