add title to page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Visual Art/Healing/Music</title>
+    <title>iamboyowa ~ ART/HEALING/MAGIC</title>
     <link rel="stylesheet" href="index.css" />
     <link rel="stylesheet" href="book.css" />
     <link rel="icon" type="image/x-icon" href="favicon.svg" />
@@ -11,8 +11,8 @@
   <body>
     <nav>
       <div class="logo">
-        <a href="https://www.iamboyowa.art">
-          <img src="favicon.svg" alt="IAMBOYOWA" />
+        <a href="">
+          <img src="favicon.svg" alt="IAMBOYOWA Logo" />
         </a>
       </div>
       <div class="links">
@@ -26,7 +26,7 @@
     </nav>
 
     <main>
-      <div id="visual-slam" class="container">
+      <div id="visual-slam" class="container anchor">
         <a href="javascript:delay('https://www.amazon.ca/dp/1738227502')">
           <div class="book">
             <div class="book-back book-inner"></div>
@@ -45,7 +45,7 @@
 
         <div class="desc">
           <span>
-            64 pages of wonderfully awesomely-packed goodness! <br /><br />
+            64 pages of wonderfully awesome-packed goodness! <br /><br />
             Some funny pictures in there too. <br /><br />
             You will start to change. <br /><br />
           </span>
@@ -56,7 +56,7 @@
 
       <div id="healing" class="container"></div>
 
-      <div id="whoami" class="container">
+      <div id="whoami" class="container anchor">
         <div class="desc">
           Boyowa was born in the UK, raised in Canada, and has been a nomad his
           whole life <br />
@@ -67,7 +67,7 @@
         </div>
       </div>
 
-      <div id="connect" class="container">
+      <div id="connect" class="container anchor">
         connect
         <form>
           <input type="text" placeholder="First Name" required />
