add sun animation to logo size radiating

--- a/index.html
+++ b/index.html
@@ -6,14 +6,16 @@
     <title>iamboyowa ~ ART/HEALING/MAGIC</title>
     <link rel="stylesheet" href="index.css" />
     <link rel="stylesheet" href="book.css" />
+    <link rel="stylesheet" href="sun.css" />
     <link rel="icon" type="image/x-icon" href="favicon.svg" />
   </head>
   <body>
     <nav>
-      <div class="logo">
+      <div class="logo sun-container">
         <a href="">
           <img src="favicon.svg" alt="IAMBOYOWA Logo" />
         </a>
+        <div class="sun"></div>
       </div>
       <div class="links">
         <div><a href="#visual-slam" class="text-shadow">VISUAL</a></div>
