do some cool stuff to visual-slam and whoami and art piece

--- a/index.html
+++ b/index.html
@@ -29,43 +29,64 @@
 
     <main>
       <div id="visual-slam" class="container anchor">
-        <a href="javascript:delay('https://www.amazon.ca/dp/1738227502')">
-          <div class="book">
-            <div class="book-back book-inner"></div>
-            <div class="book-pages book-inner"></div>
-            <div class="book-pages book-inner"></div>
-            <div class="book-pages book-inner"></div>
-            <div class="book-pages book-inner"></div>
-            <div class="book-cover book-inner">
-              <img
-                src="(just front cover) VISUAL-SLAM_200x250.png"
-                alt="visual-slam-artpoetrybook_img"
-              />
+        <div class="stuff">
+          <a href="javascript:delay('https://www.amazon.ca/dp/1738227502')">
+            <div class="book">
+              <div class="book-back book-inner"></div>
+              <div class="book-pages book-inner"></div>
+              <div class="book-pages book-inner"></div>
+              <div class="book-pages book-inner"></div>
+              <div class="book-pages book-inner"></div>
+              <div class="book-cover book-inner">
+                <img
+                  src="(just front cover) VISUAL-SLAM_200x250.png"
+                  alt="visual-slam-artpoetrybook_img"
+                />
+              </div>
             </div>
-          </div>
-        </a>
+          </a>
 
-        <div class="desc">
-          <span>
-            64 pages of wonderfully awesome-packed goodness! <br /><br />
-            Some funny pictures in there too. <br /><br />
-            You will start to change. <br /><br />
-          </span>
+          <div class="desc">
+            <span>
+              64 pages of wonderfully awesome-packed goodness! <br /><br />
+              Some funny pictures in there too. <br /><br />
+              You will start to change. <br /><br />
+            </span>
+          </div>
         </div>
       </div>
 
-      <div id="sound" class="container"></div>
+      <!-- <div id="sound" class="container"></div>
 
-      <div id="healing" class="container"></div>
+      <div id="healing" class="container"></div> -->
 
       <div id="whoami" class="container anchor">
+        <img class="boyowa" src="boyowa_painted.jpg" alt="self_potrait" />
+        <span class="text-break">~</span>
         <div class="desc">
-          Boyowa was born in the UK, raised in Canada, and has been a nomad his
+          Boyowa means 'Bringer of Joy' in the Itsekiri language of Nigeria.
+          <br />
+          He was born in the UK, raised in Canada, and has been a nomad his
           whole life <br />
           <br />
-        </div>
-        <div class="boyowa">
-          <img src="" alt="self_potrait" />
+          He started writing poetry, comics, art, and music from a little boy,
+          discovered music production in his early teens. Since then, he has
+          been exploring a variety of genres and art-styles since then such as:
+          singing, songwriting, freestyle rapping, and both visual and media
+          art design. <br />
+          <br />
+          Healing has been a huge component in his life and has been the main focus
+          ever since he started meditating at age 22. <br>
+          He is very well experienced with breathwork practices,
+          transformational psychology, and is a certified Reiki Master practitioner with years under his belt. <br>
+          He has explored Shamanism, has been on an integrative journey with nature to realizing this, 
+          and is highly experienced with various forms of subconscious integration, the zero point field, 
+          sound healing, and quantum energy work, all using his hands and voice. <br>
+          <br>
+          Boyowa loves to laugh, live, and joke around. Life is fun! Life is candid, life is a joke (above all, lol!). <br>
+          Joy is his fuel, Love is his sustenance, and connection to Source is at the heart of all creation.
+          <br />
+          <span class="text-break">~</span>
         </div>
       </div>
 
@@ -101,7 +122,12 @@
     </main>
 
     <footer class="footer">
-      <img src="favicon.svg" height="30px" width="30px" style="margin-right: 5px">
+      <img
+        src="favicon.svg"
+        height="30px"
+        width="30px"
+        style="margin-right: 5px"
+      />
       Copyright © <span id="year"></span> iamboyowa
     </footer>
 
