implement slide-show and pics for boyowa whoami section

--- a/index.html
+++ b/index.html
@@ -66,7 +66,24 @@
       <div id="healing" class="container"></div> -->
 
       <div id="whoami" class="container anchor">
-        <img class="boyowa" src="boyowa_painted.jpg" alt="self_potrait" />
+        <div class="slideshow">
+          <img
+            class="boyowa"
+            src="boyowa_painted.jpg"
+            alt="boyowa_self-portrait-painted"
+          />
+          <img
+            class="boyowa hidden"
+            src="boyowa_fandango.jpg"
+            alt="boyowa_at-fandango"
+          />
+          <img
+            class="boyowa hidden"
+            src="boyowa_deep-freeze_132x176px.jpg"
+            alt="boyowa_deep-freeze-festival"
+          />
+        </div>
+
         <span class="text-break">~</span>
         <div class="desc">
           Boyowa means 'Bringer of Joy' in the Itsekiri language of Nigeria.
