add 2 new photos to slideshow

--- a/index.html
+++ b/index.html
@@ -74,6 +74,16 @@
           />
           <img
             class="boyowa hidden"
+            src="boyowa_guitar-stand-stage_176x176.jpg"
+            alt="boyowa_standing-on-stage-guitar"
+          />
+          <img
+            class="boyowa hidden"
+            src="boyowa_painting-palace-group_176x176.jpg"
+            alt="boyowa_painting-palace-group_176x176"
+          />
+          <img
+            class="boyowa hidden"
             src="boyowa_fandango.jpg"
             alt="boyowa_at-fandango"
           />
