add connect social icons and style it better

--- a/index.html
+++ b/index.html
@@ -143,41 +143,60 @@
           >
 
           <span class="text-break">~</span>
-          
         </div>
         <div class="grain"></div>
       </div>
 
       <div id="connect" class="container anchor">
-        <span class="title">CONNECT</span>
-        <form>
-          <div class="first-last-name">
-            <input class="first form-input" type="text" placeholder="First Name" required />
-            <input class="last form-input" type="text" placeholder="Last Name" required />
+        <div class="connect">
+          <span class="title">CONNECT</span>
+          <form>
+            <div class="first-last-name">
+              <input
+                class="first form-input"
+                type="text"
+                placeholder="First Name"
+                required
+              />
+              <input
+                class="last form-input"
+                type="text"
+                placeholder="Last Name"
+                required
+              />
+            </div>
+            <input
+              class="form-input"
+              type="text"
+              placeholder="Subject"
+              required
+            />
+            <input
+              class="form-input"
+              type="email"
+              name=""
+              id=""
+              placeholder="Email"
+            />
+            <textarea
+              name=""
+              id=""
+              class="form-input"
+              cols="30"
+              rows="10"
+              placeholder="What's up?"
+              required
+            ></textarea>
+            <button class="form-input" type="submit">Send</button>
+          </form>
+          <div class="socials">
+            <a href="https://www.instagram.com/iamboyowa" target="_blank"
+              ><img class="icon" src="instagram.png" alt=""
+            /></a>
+            <a href="https://wa.me/14374324885" target="_blank"
+              ><img class="icon" src="whatsapp.png" alt=""
+            /></a>
           </div>
-          <input class="form-input" type="text" placeholder="Subject" required />
-          <input class="form-input" type="email" name="" id="" placeholder="Email" />
-          <textarea
-            name=""
-            id=""
-            class="form-input"
-            cols="30"
-            rows="10"
-            placeholder="What's up?"
-            required
-          ></textarea>
-          <button class="form-input" type="submit">Send</button>
-        </form>
-        <div class="socials">
-          <a
-            class="icon"
-            href="https://www.instagram.com/iamboyowa"
-            target="_blank"
-            >insta</a
-          >
-          <a class="icon" href="https://wa.me/14374324885" target="_blank"
-            >whatsapp</a
-          >
         </div>
       </div>
     </main>
