--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="index.css" />
     <link rel="stylesheet" href="book.css" />
     <link rel="stylesheet" href="sun.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Amatic+SC&family=Cabin+Sketch&family=Mansalva&display=swap"
+      rel="stylesheet"
+    />
     <link rel="icon" type="image/x-icon" href="favicon.svg" />
     <script
       src="https://code.jquery.com/jquery-3.7.1.min.js"
@@ -56,7 +62,7 @@
             <span>
               64 pages of wonderfully awesome-packed goodness! <br /><br />
               Some funny pictures in there too. <br /><br />
-              You will start to change. <br /><br />
+              You will start to change... <br /><br />
             </span>
           </div>
         </div>
@@ -149,8 +155,8 @@
 
       <div id="connect" class="container anchor">
         <div class="connect">
-          <span class="title">CONNECT</span>
-          <form>
+          <span class="title">- CONNECT -</span>
+          <form id="connect-form">
             <div class="first-last-name">
               <input
                 class="first form-input"
