delay open links

--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
       <div id="visual-slam" class="container anchor">
         <!-- <img class="grain-dient" src="grain.svg" alt=""> -->
         <div class="stuff">
-          <a href="javascript:delay('https://www.amazon.ca/dp/1738227502')">
+          <a
+            href="javascript:delayOpen('https://www.amazon.ca/dp/1738227502', 500)"
+          >
             <div class="book">
               <div class="book-back book-inner"></div>
               <div class="book-pages book-inner"></div>
@@ -196,10 +198,12 @@
             <button class="form-input" type="submit">Send</button>
           </form>
           <div class="socials">
-            <a href="https://www.instagram.com/iamboyowa" target="_blank"
+            <a
+              href="javascript:delayOpen('https://www.instagram.com/iamboyowa', 500)"
               ><img class="icon" src="instagram.png" alt=""
             /></a>
-            <a href="https://wa.me/14374324885" target="_blank"
+            <a
+              href="javascript:delayOpen('https://wa.me/14374324885', 500)"
               ><img class="icon" src="whatsapp.png" alt=""
             /></a>
           </div>
