add MUSIC to navbar opens linktr.ee

--- a/index.html
+++ b/index.html
@@ -30,11 +30,12 @@
       </div>
       <div class="links">
         <div><a href="#visual-slam" class="text-shadow">VISUAL</a></div>
-        <!-- <div><a href="#sound">SOUND</a></div> -->
+        
         <!-- <div><a href="#healing">HEALING</a></div> -->
         <div><a href="#whoami" class="text-shadow">WHOAMI</a></div>
         <!-- <div><a href="">BLOG</a></div> -->
         <div><a href="#connect" class="text-shadow">CONNECT</a></div>
+        <div><a href="javascript:delayOpen('https://linktr.ee/iamboyowa', 400)">MUSIC</a></div>
       </div>
     </nav>
 
