--- a/index.html
+++ b/index.html
@@ -7,36 +7,65 @@
     <link rel="stylesheet" href="index.css" />
     <link rel="stylesheet" href="book.css" />
     <link rel="stylesheet" href="sun.css" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Amatic+SC&family=Cabin+Sketch&family=Mansalva&display=swap"
       rel="stylesheet"
     />
+
+
     <link rel="icon" type="image/x-icon" href="favicon.svg" />
     <script
       src="https://code.jquery.com/jquery-3.7.1.min.js"
       integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
       crossorigin="anonymous"
     ></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
+    />
   </head>
   <body>
-    <nav>
-      <div class="logo sun-container">
+    <nav class="navbar navbar-expand-md">
+      <div class="navbar-brand logo sun-container">
         <a href="">
           <img src="favicon.svg" alt="IAMBOYOWA Logo" />
         </a>
         <div class="sun"></div>
       </div>
-      <div class="links">
+
+      <div id="nav-horizontal" class="links">
         <div><a href="#visual-slam" class="text-shadow">VISUAL</a></div>
-        
+
         <!-- <div><a href="#healing">HEALING</a></div> -->
         <div><a href="#whoami" class="text-shadow">WHOAMI</a></div>
         <!-- <div><a href="">BLOG</a></div> -->
         <div><a href="#connect" class="text-shadow">CONNECT</a></div>
-        <div><a href="javascript:delayOpen('https://linktr.ee/iamboyowa', 400)">MUSIC</a></div>
+        <div>
+          <a href="javascript:delayOpen('https://linktr.ee/iamboyowa', 400)"
+            >MUSIC</a
+          >
+        </div>
       </div>
+
+      <div class="dropdown" id="nav-dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Menu
+        </a>
+        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item_my text-shadow" href="#visual-slam">VISUAL</a>
+          <a class="dropdown-item_my text-shadow" href="#whoami">WHOAMI</a>
+          <a class="dropdown-item_my text-shadow" href="#connect">CONNECT</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item_my text-shadow" href="javascript:delayOpen('https://linktr.ee/iamboyowa', 400)">MUSIC</a>
+        </div>
+      </div>
+      
+
     </nav>
 
     <main>
@@ -203,8 +232,7 @@
               href="javascript:delayOpen('https://www.instagram.com/iamboyowa', 500)"
               ><img class="icon" src="instagram.png" alt=""
             /></a>
-            <a
-              href="javascript:delayOpen('https://wa.me/14374324885', 500)"
+            <a href="javascript:delayOpen('https://wa.me/14374324885', 500)"
               ><img class="icon" src="whatsapp.png" alt=""
             /></a>
           </div>
