coolify visual-slam wider text fixes grain restabilize

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
               <div class="book-pages book-inner"></div>
               <div class="book-cover book-inner">
                 <img
-                  src="(just front cover) VISUAL-SLAM_200x250.png"
+                  src="(just front cover) VISUAL-SLAM_800x1000.jpg"
                   alt="visual-slam-artpoetrybook_img"
                 />
               </div>
@@ -105,19 +105,20 @@
           <div class="desc">
             <span>
               64 pages of wonderfully awesome-packed goodness! <br /><br />
-              Some funny pictures in there too. <br /><br />
-              You will start to change... <br /><br />
+
+              Visual art & spoken word poetry blended together. 🎭<br><br>
+
+              (some funny in there too, lol..😆) <br /><br />
+              YOU WILL START TO CHANGE...<br /><br />
             </span>
           </div>
         </div>
-        <div class="grain"></div>
+        <!-- <div class="grain"></div> -->
       </div>
 
-      <!-- <div id="sound" class="container"></div>
+      <!-- <div id="healing" class="container"></div> -->
 
-      <div id="healing" class="container"></div> -->
-
-      <div id="whoami" class="container anchor grain">
+      <div id="whoami" class="container anchor">
         <div class="slideshow">
           <img
             class="boyowa"
@@ -165,7 +166,7 @@
             singing, songwriting, freestyle rapping, and both visual and media
             art design.<br />
             <br />
-            Healing has been a huge component in his life and has been the main
+            Healing has been a huge component of his life and has been the main
             focus ever since he started meditating at age 22. <br />
             He is very well experienced with breathwork practices,
             transformational psychology, and is a certified Reiki Master
@@ -179,14 +180,14 @@
           </span>
 
           <span class="more-to-show"
-            >subconscious integration, the zero point field, sound healing, and
+            >subconscious integration with the zero point field, sound healing, and
             quantum energy work, all using his hands and voice.
             <br />
             <br />
             Boyowa loves to laugh, live, and joke around. Life is fun! Life is
             candid, life is a joke (above all, lol!). <br />
             Joy is his fuel, Love is his sustenance, and connection to Source is
-            at the heart of all creation.
+            at the heart of all creation. 😊
             <span class="show-less" onclick="showLess()"
               >(show less)</span
             ></span
@@ -223,7 +224,7 @@
                 required
               />
               <input
-                type='hidden'
+                type="hidden"
                 id="name-to-send"
                 class="last form-input"
                 name="name"
@@ -256,7 +257,11 @@
               placeholder="What's up?"
               required
             ></textarea>
-            <input type="hidden" name="_next" value="http://127.0.0.1:5500/thanks.html" />
+            <input
+              type="hidden"
+              name="_next"
+              value="http://127.0.0.1:5500/thanks.html"
+            />
             <button class="form-input" type="submit">Send</button>
           </form>
           <div class="socials">
