fix padding grain issues

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     </nav>
 
     <main>
-      <div id="visual-slam" class="container anchor">
+      <div id="visual-slam" class="my-container anchor">
         <!-- <img class="grain-dient" src="grain.svg" alt=""> -->
         <div class="stuff">
           <a
@@ -113,12 +113,12 @@
             </span>
           </div>
         </div>
-        <!-- <div class="grain"></div> -->
+        <div class="grain"></div>
       </div>
 
       <!-- <div id="healing" class="container"></div> -->
 
-      <div id="whoami" class="container anchor">
+      <div id="whoami" class="my-container anchor">
         <div class="slideshow">
           <img
             class="boyowa"
@@ -198,7 +198,7 @@
         <div class="grain"></div>
       </div>
 
-      <div id="connect" class="container anchor">
+      <div id="connect" class="my-container anchor">
         <div class="connect">
           <span class="title">- CONNECT -</span>
           <form
