decrease loading times by 33%

--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Amatic+SC&family=Cabin+Sketch&family=Mansalva&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Amatic+SC&family=Cabin+Sketch&&display=swap"
       rel="stylesheet"
     />
 
-    <link rel="icon" type="image/x-icon" href="favicon.svg" />
+    <link rel="icon" type="image/x-icon" href="favicon.png" />
     <script
       src="https://code.jquery.com/jquery-3.7.1.min.js"
       integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
       crossorigin="anonymous"
     ></script>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js"></script>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
@@ -32,7 +32,7 @@
     <nav class="navbar navbar-expand-md">
       <div class="navbar-brand logo sun-container">
         <a href="">
-          <img src="favicon.svg" alt="IAMBOYOWA Logo" />
+          <img src="favicon.png" alt="IAMBOYOWA Logo" />
         </a>
         <div class="sun"></div>
       </div>
@@ -95,7 +95,7 @@
               <div class="book-pages book-inner"></div>
               <div class="book-cover book-inner">
                 <img
-                  src="(just front cover) VISUAL-SLAM_800x1000.jpg"
+                  src="(just front cover) VISUAL-SLAM_300x375.jpg"
                   alt="visual-slam-artpoetrybook_img"
                 />
               </div>
@@ -279,7 +279,7 @@
 
     <footer class="footer">
       <img
-        src="favicon.svg"
+        src="favicon.png"
         height="30px"
         width="30px"
         style="margin-right: 5px"
