install parcel package bundler + npm run scripts

--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
+    <!-- <link
       href="https://fonts.googleapis.com/css2?family=Amatic+SC&family=Cabin+Sketch&&display=swap"
+      rel="stylesheet"
+    /> -->
+    <link
+      href="google-font_Amatic SC+Cabin Sketch.css"
       rel="stylesheet"
     />
 
